--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -71,7 +71,7 @@
                                         <form action="donateThankYou.html" class="px-4 donation-form">
                                             <div class="form-group">
                                                 <label for="amount" class="text-muted">Amount ($)</label> <br>
-                                                <input type="number" placeholder="Amount" id="amount" class="form-control amount" required>
+                                                <input type="number" placeholder="Amount" id="creditCardAmount" class="form-control amount" required>
                                             </div>
 
                                             <div class="card-nav">
@@ -136,7 +136,7 @@
                                                 <textarea class="form-control" id="Textarea" placeholder="leave a comment (Optional)" rows="3"></textarea>
                                             </div>
 
-                                            <button type="submit" class="btn btn-success mb-5" id="donate-btn">Donate $</button>
+                                            <button type="submit" class="btn btn-success mb-5" id="creditCardDonate-btn">Donate $</button>
                                         </form>
                                     </div>
                                 </div>
@@ -155,6 +155,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
+    <script src="js/functionality.js"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
