--- a/donnateMpesa.html
+++ b/donnateMpesa.html
@@ -114,7 +114,7 @@
                                                     <li>Select Lipa na M-PESA</li>
                                                     <li>Select Buy Goods and Services</li>
                                                     <li>Enter Till Number: <strong>"5154883"</strong></li>
-                                                    <li>Enter Amount: <strong>"KES "</strong></li>
+                                                    <li>Enter Amount: <strong id="mpesaAmount">"KES "</strong></li>
                                                     <li>Enter Your M-PESA pin</li>
                                                     <li>Confirm payment/ transaction</li>
                                                     <li>Done!</li>
@@ -146,6 +146,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
+    <script src="js/functionality.js"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
