--- a/donnateMpesa.html
+++ b/donnateMpesa.html
@@ -27,6 +27,19 @@
                                 <div class="col-md-4">
                                     <div class="card" data-aos="fade">
                                         <div class="card-body">
+                                            <h4 class="text-center mb-1">Project Name</h4>
+                                            <hr>
+                                            <img src="images/sunset.jpg" alt="project image" class="card-img-top">
+                                            <p class="para-1 mt-2">
+                                                Short Description of the project, this project will be used to help people with scoliosis 
+                                                the construction will be happen at Nanyuki 
+                                            </p>
+                                            <h6 class="text-muted text-center">Target Amount: KES <span>1,000,000</span></h6>
+                                        </div>
+                                    </div>
+
+                                    <div class="card" data-aos="fade">
+                                        <div class="card-body">
                                             <h4 class="text-center mb-2">Finance Accountability</h4>
                                             <p class="para-1">
                                                 Practicing fiscal accountability is a critical aspect of KSF’s financial stewardship model. 
@@ -145,6 +158,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyA0SphiRNYxtUOX517aZbPXJYvxXC4UepU"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/functionality.js"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
