--- a/rsvp.html
+++ b/rsvp.html
@@ -54,9 +54,11 @@
                                     <h4 class="card-title">Event Name</h4>
                                     <hr>
                                     <p class="card-text">
-                                        <i class="fas fa-calendar-week"></i> Date 
+                                        <i class="fas fa-calendar-week"></i> <span>Date</span>
+                                        <i class="fas fa-clock ml-3"></i> <span>Time</span>
                                         <br>
-                                        <i class="fas fa-map-marker-alt"></i> Venue
+                                        <i class="fas fa-map-marker-alt"></i> <span>Venue</span>
+                                        <i class="fas fa-ticket-alt ml-3"></i> Kshs <span id="eventFee">2,000</span>
                                     </p>
                                 </div>
                             </div>
@@ -69,7 +71,7 @@
                                         <li>Select Lipa na M-PESA</li>
                                         <li>Select Buy Goods and Services</li>
                                         <li>Enter Till Number: <strong>"5154883"</strong></li>
-                                        <li>Enter Amount: <strong>"KES "</strong></li>
+                                        <li>Enter Amount: <strong>"KES <span id="eventFeePreview"></span>"</strong></li>
                                         <li>Enter Your M-PESA pin</li>
                                         <li>Confirm payment/ transaction</li>
                                         <li>Done!</li>
